# src/main/java/com/mirigangneung/composition/dto/CompositionModelResponse.java
@@ -1,0 +1,8 @@
+package com.mirigangneung.composition.dto;
+
+public record CompositionModelResponse(
+        String id,
+        String name,
+        String imageUrl,
+        String description) {
+}
